--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -2,4 +2,7 @@ services:
   app:
     ports:
       - "0.0.0.0:8080:8080"
+    dockerfile: Dockerfile
+    volumes:
+      - ./app:/app
     command: make dev 
