--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -37,9 +37,7 @@ jobs:
           tags: ${{ env.APP_IMAGE_NAME }}
 
       - name: Check
-        run: |
-          make ansible-generate-env
-          make ci
+        run: docker compose --file docker-compose.yml up --abort-on-container-exit
 
       - name: Push
         uses: docker/build-push-action@v3
