--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -37,7 +37,7 @@ jobs:
           tags: ${{ env.APP_IMAGE_NAME }}
 
       - name: Check
-        run: docker compose --file docker-compose.yml up --abort-on-container-exit
+        run: docker compose --file docker-compose.yml up --abort-on-container-exit --exit-code-from app
 
       - name: Push
         uses: docker/build-push-action@v3
