--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,8 +14,8 @@ services:
     # set shared memory limit when using docker-compose
     shm_size: 128mb
     environment:
-      POSTGRES_USER: ${{ secrets.POSTGRES_USERNAME }}
-      POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
+      POSTGRES_USER: $${{ secrets.POSTGRES_USERNAME }}
+      POSTGRES_PASSWORD: $${{ secrets.POSTGRES_PASSWORD }}
      volumes:
       - db:/data/postgres
     healthcheck:
